bin/tests/snapshots/manual_inherit__fix_287b90d387af9044b772153bd95b398106d6e004717c9530e9aa547ef39a1f20.snap
---
source: bin/tests/manual_inherit.rs
expression: "\"let y = 2; in { x.y = y; }\""
---
--- <temp_file_path>
+++ <temp_file_path> [fixed]
@@ -1 +1 @@
-let y = 2; in { x.y = y; }
+{ x.y = 2; }
