bin/tests/snapshots/manual_inherit__lint_287b90d387af9044b772153bd95b398106d6e004717c9530e9aa547ef39a1f20.snap
---
source: bin/tests/manual_inherit.rs
expression: "\"let y = 2; in { x.y = y; }\""
---
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:1:5]
   │
 1 │ let y = 2; in { x.y = y; }
   ·     ───┬──            ┬  
   ·        ╰───────────────── y is only used once; consider inlining
   ·                       │  
   ·                       ╰── y is only used once; consider inlining
───╯
