bin/tests/snapshots/manual_inherit__lint_2a92c1cb560d2d727373fb3ad10da2b17cf57a13421fc72f9847d8d25bf8099d.snap
---
source: bin/tests/manual_inherit.rs
expression: "\"let a = 2; in { a = a; }\""
---
[W30] Warning: Let binding used only once; consider inlining
   ╭─[<temp_file_path>:1:5]
   │
 1 │ let a = 2; in { a = a; }
   ·     ───┬──          ┬  
   ·        ╰─────────────── a is only used once; consider inlining
   ·                     │  
   ·                     ╰── a is only used once; consider inlining
───╯
[W03] Warning: Assignment instead of inherit
   ╭─[<temp_file_path>:1:17]
   │
 1 │ let a = 2; in { a = a; }
   ·                 ───┬──  
   ·                    ╰──── This assignment is better written with inherit
───╯
